--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "mObywatel",
   "short_name": "mObywatel",
-  "start_url": "69696969",
+  "start_url": "/69696969/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#ffffff",
